feat: finished preliminary work, ready to refactor

--- a/lib/styl/_schemes/_sidebar.styl
+++ b/lib/styl/_schemes/_sidebar.styl
@@ -20,18 +20,7 @@
   border-radius: 5px;
   z-index: 2;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
-
-  &.affix {
-    position: fixed;
-    top: $sidebar-offset;
-    width: $sidebar-desktop;
-  }
-
-  &.affix-bottom {
-    position: absolute;
-    width: $sidebar-desktop;
-  }
-
+  position: sticky;
 }
 
 
