--- a/lib/styl/_common/components/post/post.styl
+++ b/lib/styl/_common/components/post/post.styl
@@ -27,7 +27,7 @@
   }
 }
 
-.post-body .fancybox img {
+.post-body img {
   display: block !important;
   margin: 0 auto;
   cursor: pointer;
@@ -95,5 +95,4 @@
 @import "post-gallery";
 @import "post-reward" if hexo-config('alipay') or hexo-config('wechatpay') or hexo-config('bitcoin');
 @import "post-copyright" if hexo-config('post_copyright.enable');
-@import "post-widgets" if (hexo-config('facebook_sdk.enable') and hexo-config('facebook_sdk.like_button')) or (hexo-config('vkontakte_api.enable') and hexo-config('vkontakte_api.like')) or hexo-config('rating.enable') or (hexo-config('needmoreshare2.enable') and hexo-config('needmoreshare2.postbottom.enable'));
 @import "post-rtl";
