chore: remove unused code form NexT

--- a/lib/styl/_common/components/sidebar/sidebar.styl
+++ b/lib/styl/_common/components/sidebar/sidebar.styl
@@ -26,7 +26,7 @@
 }
 
 .sidebar-inner {
-  position: relative;
+  position: sticky;
   padding: 20px 10px;
   color: $grey-dark;
   text-align: center;
@@ -41,7 +41,6 @@
   overflow-x: hidden;
 }
 
-@import "sidebar-toggle";
 @import "sidebar-author";
 @import "site-state";
 @import "sidebar-feed-link";
