--- a/lib/styl/_schemes/_layout.styl
+++ b/lib/styl/_schemes/_layout.styl
@@ -1,6 +1,6 @@
 body {
   background: #fff;
-  cursor: url('https://cdn.jsdelivr.net/gh/DIYgod/diygod.me/themes/sagiri/source/images/cursor.ico'), auto;
+  cursor: url('/images/cursor.ico'), auto;
 }
 
 .header {
@@ -92,8 +92,6 @@ body {
     display: none;
   }
 }
-
-.sidebar-toggle { display: none; }
 
 .footer {
   background: #232323;
