--- a/lib/styl/_mixins/base.styl
+++ b/lib/styl/_mixins/base.styl
@@ -119,37 +119,36 @@ clearfix() {
 
 @font-face {
   font-family: 'Candyshop';
-  src: url(https://cdn.jsdelivr.net/gh/DIYgod/diygod.me/themes/sagiri/source/fonts/Candyshop.otf);
+  src: url(/fonts/Candyshop.otf);
   font-display: swap;
 }
 
 @font-face {
     font-family: SFCompactRounded;
     font-weight: 400;
-    src: url('https://cdn.jsdelivr.net/gh/DIYgod/diygod.me/themes/sagiri/source/fonts/SF-Compact-Rounded-Regular.otf') format('opentype');
+    src: url('/fonts/SF-Compact-Rounded-Regular.otf') format('opentype');
 }
 
 @font-face {
     font-family: SFCompactRounded;
     font-weight: 300;
-    src: url('https://cdn.jsdelivr.net/gh/DIYgod/diygod.me/themes/sagiri/source/fonts/SF-Compact-Rounded-Light.otf') format('opentype');
+    src: url('/fonts/SF-Compact-Rounded-Light.otf') format('opentype');
 }
 
 @font-face {
     font-family: SFCompactRounded;
     font-weight: 500;
-    src: url('https://cdn.jsdelivr.net/gh/DIYgod/diygod.me/themes/sagiri/source/fonts/SF-Compact-Rounded-Medium.otf') format('opentype');
+    src: url('/fonts/SF-Compact-Rounded-Medium.otf') format('opentype');
 }
 
 @font-face {
     font-family: SFCompactRounded;
     font-weight: 600;
-    src: url('https://cdn.jsdelivr.net/gh/DIYgod/diygod.me/themes/sagiri/source/fonts/SF-Compact-Rounded-Semibold.otf') format('opentype');
+    src: url('/fonts/SF-Compact-Rounded-Semibold.otf') format('opentype');
 }
 
 sidebar-inline-links-item() {
   margin: 0 0 7px;
-  if !hexo-config('social_icons.icons_only') { width: 50%; }
 
   & a {
     max-width: 216px;
@@ -161,6 +160,5 @@ sidebar-inline-links-item() {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    if hexo-config('social_icons.transition') { the-transition(); }
   }
 }
