feat: plus radius & make nav bar more modern

--- a/lib/styl/_common/scaffolding/base.styl
+++ b/lib/styl/_common/scaffolding/base.styl
@@ -100,7 +100,7 @@ dd {
 
 kbd {
   border: 1px solid $grey-light;
-  border-radius: 0.2em;
+  border-radius: 10px;
   box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1);
   background-color: #f9f9f9;
   font-family: inherit;
