--- a/lib/styl/_variables/base.styl
+++ b/lib/styl/_variables/base.styl
@@ -139,7 +139,7 @@ $table-row-hover-bg-color       = $whitesmoke
 $code-font-family               = $font-family-monospace
 $code-font-size                 = 13px
 $code-font-size                 = unit(hexo-config('font.codes.size'), px) if hexo-config('font.codes.size') is a 'unit'
-$code-border-radius             = 3px
+$code-border-radius             = 10px
 $code-foreground                = $black-light
 $code-background                = $gainsboro
 
@@ -420,7 +420,7 @@ $box-shadow-inner                 = initial;
 $box-shadow                       = initial;
 
 $border-radius-inner              = initial;
-$border-radius                    = initial;
+$border-radius                    = 10px;
 
 
 // Header
