--- a/lib/styl/_common/components/sidebar/sidebar-author-links.styl
+++ b/lib/styl/_common/components/sidebar/sidebar-author-links.styl
@@ -17,7 +17,7 @@
     content: " ";
     width: 4px;
     height: 4px;
-    border-radius: 50%;
+    border-radius: 10px;
     background: rgb(random-color(0, 255) - 50%, random-color(0, 255) - 50%, random-color(0, 255) - 50%);
   }
 }
