feat: sidebar move with window

--- a/lib/styl/_schemes/_layout.styl
+++ b/lib/styl/_schemes/_layout.styl
@@ -79,7 +79,7 @@ body {
 
 .sidebar {
   position: static;
-  float: left;
+  float: right;
   margin-top: 300px;
   width: $sidebar-desktop;
   background: $body-bg-color;
