--- a/lib/styl/_schemes/_menu.styl
+++ b/lib/styl/_schemes/_menu.styl
@@ -6,6 +6,7 @@
   text-shadow: 0 1px 1px rgba(0,0,0,.3);
   z-index: 3;
   background-color: rgba(255,255,255,0.72);
+  backdrop-filter: blur(20px);
   height: 56px;
 }
 
@@ -120,7 +121,7 @@
   text-align: center;
   width: 50%;
   margin: auto;
-  top: -150px;
+  top: -195px;
   padding: 40px 0;
   padding-bottom: 40px;
   font-size: 16px;
