chore: remove jQuery & use vanilla JavaScript

--- a/lib/styl/_common/scaffolding/base.styl
+++ b/lib/styl/_common/scaffolding/base.styl
@@ -3,8 +3,12 @@
   background: $selection-bg;
 }
 
+:root {
+  scroll-behavior: smooth;
+}
+
 body {
-  position: relative; // Required by scrollspy
+  position: relative;
   font-family: $font-family-base;
   font-size: $font-size-base;
   line-height: $line-height-base;
