--- a/lib/styl/_common/outline/outline.styl
+++ b/lib/styl/_common/outline/outline.styl
@@ -4,6 +4,9 @@
 //       Or Hexo will use it as template layout.
 // =================================================
 
+html {
+  scroll-padding-top: 70px;
+}
 
 html, body { height: 100%; }
 
