--- a/lib/styl/_schemes/_posts.styl
+++ b/lib/styl/_schemes/_posts.styl
@@ -39,10 +39,10 @@
   position: absolute;
   top: -20px;
   left: -30px;
-  height: 60px;
+  height: 70px;
   width: 70px;
-  padding-top: 10px;
-  border-radius: 100px;
+  padding-top: 12px;
+  border-radius: 100%;
   color: #fff;
   text-align: center;
   line-height: 1.1;
