--- a/lib/styl/_schemes/_brand.styl
+++ b/lib/styl/_schemes/_brand.styl
@@ -73,7 +73,7 @@
   }
 
   .animate svg {
-    fill: #FF9800;
+    fill: $anya-theme;
     overflow: visible;
     text-shadow: none;
     height: 1px;
