--- a/lib/styl/_schemes/_layout.styl
+++ b/lib/styl/_schemes/_layout.styl
@@ -1,5 +1,5 @@
 body {
-  background: #fff;
+  background: $anya-white;
   cursor: url('/images/cursor.ico'), auto;
 }
 
@@ -94,10 +94,10 @@ body {
 }
 
 .footer {
-  background: #232323;
+  background: $anya-text;
   padding: 15px 0 40px;
   text-align: center;
-  color: #888;
+  color: $anya-white;
   font-size: 12px;
   line-height: 1.5;
 
@@ -130,11 +130,11 @@ body {
 
 a {
   border-bottom: 0;
-  color: #ab3300;
+  color: $anya-theme;
 }
 
 .btn {
-  background: $main-color;
+  background: $theme-anya;
   color: #fff;
   font-size: 13px;
   padding: 1px 15px;
@@ -142,7 +142,8 @@ a {
   border: none;
 
   &:hover {
-    background: $main-color;
+    background: $theme-anya;
+    color: #fff;
   }
 }
 
