--- a/lib/styl/_schemes/_posts.styl
+++ b/lib/styl/_schemes/_posts.styl
@@ -3,13 +3,13 @@
 
   .post-title-link,
   .post-title {
-    color: #444;
-    font-size: 25px;
-    font-weight: 700;
+    color: $anya-text;
+    font-size: 22px;
+    font-weight: 600;
   }
 
   .post-meta {
-    color: #555;
+    color: $anya-text;
     margin-top: 5px;
 
     +mobile() {
@@ -34,7 +34,7 @@
 }
 
 .post-date {
-  background-color: $main-color;
+  background-color: $anya-theme;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
   position: absolute;
   top: -20px;
@@ -104,26 +104,26 @@
 
   .page-number {
     background: #fff;
-    color: $main-color;
+    color: $anya-theme;
     border-radius: 10px;
-    border: 1px solid $main-color;
+    border: 1px solid $anya-theme;
 
     &:hover {
-      background: $main-color;
+      background: $anya-theme;
       color: #fff;
-      border-top-color: $main-color;
-      border-bottom-color: $main-color;
+      border-top-color: $anya-theme;
+      border-bottom-color: $anya-theme;
     }
 
     &.current {
-      background: $main-color;
-      border: 1px solid $main-color;
+      background: $anya-theme;
+      border: 1px solid $anya-theme;
     }
   }
 
   .extend {
     border-top: none;
-    color: $main-color;
+    color: $anya-theme;
     border: none;
     &:hover {
       border-top: none;
