--- a/lib/styl/_variables/base.styl
+++ b/lib/styl/_variables/base.styl
@@ -86,7 +86,7 @@ $font-weight-bolder       = 700
 
 
 // Font size
-$font-size-base           = 14px
+$font-size-base           = 16px
 $font-size-base           = unit(hexo-config('font.global.size'), px) if hexo-config('font.global.size') is a 'unit'
 $font-size-small          = $font-size-base - 2px
 $font-size-smaller        = $font-size-base - 4px
@@ -452,3 +452,7 @@ $full-image-margin-vertical   = 0
 
 $main-color   = #97dffd
 $second-color = #47456d
+
+$anya-text = #0C2627
+$anya-theme = #D6B977
+$anya-white = #F2E4E1
