chore: make background white & add anya cursor

--- a/lib/styl/_schemes/_layout.styl
+++ b/lib/styl/_schemes/_layout.styl
@@ -1,6 +1,6 @@
 body {
   background: $anya-white;
-  cursor: url('/images/cursor.ico'), auto;
+  cursor: url('/images/cursor.gif'), auto;
 }
 
 .header {
